Update config from server

--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -3,7 +3,7 @@
     "name": "dadi.co website - development"
   },
   "server": {
-    "host": "localhost",
+    "host": "0.0.0.0",
     "port": 4113
   },
   "api": {
