--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "postcss-cli": "^2.6.0",
     "postcss-import": "^8.1.2",
     "require-globify": "^1.4.1",
+    "sendgrid": "^4.7.1",
     "uglify-js": "^2.7.3",
     "watch": "^1.0.1"
   },
