--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "domready": "^1.0.8",
     "exorcist": "^0.4.0",
     "front-matter": "^2.1.0",
+    "highlight.js": "^9.8.0",
     "jquery": "^3.1.1",
     "jshint": "^2.9.3",
     "marked": "^0.3.6",
