--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "postcss-import": "^8.1.2",
     "require-globify": "^1.4.1",
     "sendgrid": "^4.7.1",
+    "sticky-kit": "github:leafo/sticky-kit",
     "uglify-js": "^2.7.3",
     "watch": "^1.0.1"
   },
