--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
-    "@dadi/web": "git+https://github.com/dadi/web.git",
+    "@dadi/web": "github:dadi/web#feature/markdown-provider",
     "autoprefixer": "^6.5.0",
     "browserify": "^13.1.0",
     "cheerio": "^0.20.0",
