--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -3,9 +3,8 @@
     "name": "dadi.co website - development"
   },
   "server": {
-    "host": "0.0.0.0",
-    "port": 80,
-    "server.protocol": "https"
+    "host": "localhost",
+    "port": 4113
   },
   "cluster": false,
   "api": {
