--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -3,8 +3,8 @@
     "name": "dadi.co website - development"
   },
   "server": {
-    "host": "localhost",
-    "port": 4113
+    "host": "0.0.0.0",
+    "port": 80
   },
   "cluster": false,
   "api": {
