--- a/web/config/config.stage.json
+++ b/web/config/config.stage.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "name": "dadi.co website - Live"
+    "name": "dadi.co website - Stage"
   },
   "server": {
     "host": "0.0.0.0",
