--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -3,13 +3,13 @@
     "name": "dadi.co website - development"
   },
   "server": {
-    "host": "0.0.0.0",
-    "port": 80
+    "host": "localhost",
+    "port": 4113
   },
   "cluster": false,
   "api": {
-    "host": "0.0.0.0",
-    "port": 80,
+    "host": "127.0.0.1",
+    "port": 4111,
     "enabled": false
   },
   "auth": {
