--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
-    "@dadi/web": "github:dadi/web#feature/markdown-provider",
+    "@dadi/web": "github:dadi/web#feature/version-2.0",
     "autoprefixer": "^6.5.0",
     "browserify": "^13.1.0",
     "cheerio": "^0.20.0",
@@ -34,7 +34,6 @@
     "domready": "^1.0.8",
     "dustjs-linkedin": "^2.7.5",
     "exorcist": "^0.4.0",
-    "front-matter": "^2.1.0",
     "highlight.js": "^9.8.0",
     "jquery": "^3.1.1",
     "jshint": "^2.9.3",
