chore: use global events config

--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -20,6 +20,9 @@
   "global": {
     "description": "DADI reinvents the technology of the web. It enables real-time, personalised experiences driven by machine learning."
   },
+  "globalEvents": [
+    "globals"
+  ],
   "paths": {
     "datasources": "./workspace/datasources",
     "events": "./workspace/events",
