--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -23,6 +23,23 @@
   "globalEvents": [
     "globals"
   ],
+  "headers": {
+    "useGzipCompression": true,
+    "cacheControl": {
+      "301": "no-cache",
+      "302": "no-cache",
+      "307": "no-cache",
+      "text/css": "public, max-age=2592000",
+      "text/javascript": "public, max-age=2592000",
+      "image/jpeg": "public, max-age=2592000",
+      "image/png": "public, max-age=2592000",
+      "image/svg+xml": "public, max-age=2592000",
+      "application/javascript": ""
+    },
+    "cors": {
+      "Access-Control-Allow-Origin": "*"
+    }
+  },
   "paths": {
     "datasources": "./workspace/datasources",
     "events": "./workspace/events",
