--- a/web/package.json
+++ b/web/package.json
@@ -8,8 +8,6 @@
     "url": "git+https://github.com/dadi/dadi.tech.git"
   },
   "scripts": {
-    "start": "NODE_ENV=development node main.js",
-    "test": "./node_modules/mocha/bin/_mocha test/unit && ./node_modules/cucumber/bin/cucumber.js test/browser/features",
     "watch": "watch 'npm run build:css' workspace/frontend/sass/ -d -u && watch 'npm run build:js' workspace/frontend/js/ -d -u",
     "prebuild": "mkdir -p workspace/public/assets/css workspace/public/assets/js",
     "build": "npm run build:css && npm run build:js",
@@ -25,14 +23,13 @@
   },
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
-    "@dadi/web": "github:dadi/web#feature/version-2.0",
+    "@dadi/web": "^2.0.0",
     "autoprefixer": "^6.5.0",
     "browserify": "^13.1.0",
     "cheerio": "^0.20.0",
     "chroma-js": "^1.2.2",
     "clean-css": "^3.4.20",
     "domready": "^1.0.8",
-    "dustjs-linkedin": "^2.7.5",
     "exorcist": "^0.4.0",
     "highlight.js": "^9.8.0",
     "jquery": "^3.1.1",
