--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "require-globify": "^1.4.1",
     "sendgrid": "^4.7.1",
     "sticky-kit": "github:leafo/sticky-kit",
+    "typewriter": "github:fardjad/realistic-typewriter.js",
     "uglify-js": "^2.7.3",
     "underscore": "^1.8.3",
     "watch": "^1.0.1"
