feat: multi-lingual support #49

--- a/config/config.development.json
+++ b/config/config.development.json
@@ -21,7 +21,8 @@
     "description": "DADI reinvents the technology of the web. It enables real-time, personalised experiences driven by machine learning."
   },
   "globalEvents": [
-    "globals"
+    "globals",
+    "i18l"
   ],
   "headers": {
     "useGzipCompression": true,
