--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
     "@dadi/web": "^2.0.0",
+    "accept-language-parser": "^1.4.0",
     "autoprefixer": "^6.5.0",
     "browserify": "^13.1.0",
     "cheerio": "^0.20.0",
