--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -18,7 +18,8 @@
     "secret":"superSecret"
   },
   "global": {
-    "description": "DADI reinvents the technology of the web. It enables real-time, personalised experiences driven by machine learning."
+    "description": "DADI reinvents the technology of the web. It enables real-time, personalised experiences driven by machine learning.",
+    "protocol": "http"
   },
   "globalEvents": [
     "globals"
