--- a/config/config.qa.json
+++ b/config/config.qa.json
@@ -18,7 +18,8 @@
     "secret":"superSecret"
   },
   "global": {
-    "description": "DADI is a powerful, API-first content management solution for products of all sizes and scale. It enables real-time, personalized experiences driven by machine learning."
+    "description": "DADI is a powerful, API-first content management solution for products of all sizes and scale. It enables real-time, personalized experiences driven by machine learning.",
+    "protocol": "http"
   },
   "globalEvents": [
     "globals"
