--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/dadi/dadi.tech.git"
   },
   "scripts": {
-    "watch": "watch 'npm run build:css' workspace/frontend/sass/ -d -u && watch 'npm run build:js' workspace/frontend/js/ -d -u",
+    "watch": "watch 'npm run build:css' workspace/frontend/sass/ -d -u && watch 'npm run build:js' workspace/frontend/src/ -d -u",
     "prebuild": "mkdir -p workspace/public/assets/css workspace/public/assets/js",
     "build": "npm run build:css && npm run build:js",
     "build:css": "node-sass workspace/frontend/sass/main.scss workspace/public/assets/css/main.css --source-map true",
