--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint": "jshint workspace/frontend/src/**.js",
     "build:js": "browserify workspace/frontend/src/**.js --debug | exorcist workspace/public/assets/js/main.js.map > workspace/public/assets/js/main.js",
     "postbuild:js": "uglifyjs workspace/public/assets/js/main.js -o workspace/public/assets/js/main.min.js && npm run notify:js",
-    "notify:css": "notify -t 'DADI' -m '🎉 CSS compiled & minified'",
-    "notify:js": "notify -t 'DADI' -m '🎉 JS compiled & minified'"
+    "notify:css": "notify -t 'CSS' -m '🎉 Compiled & minified'",
+    "notify:js": "notify -t 'JS' -m '🎉 Compiled & minified'"
   },
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
