--- a/config/config.qa.json
+++ b/config/config.qa.json
@@ -22,7 +22,8 @@
     "protocol": "http"
   },
   "globalEvents": [
-    "globals"
+    "globals",
+    "i18l"
   ],
   "headers": {
     "useGzipCompression": true,
