--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
-    "@dadi/web": "^2.0.0",
+    "@dadi/web": "github:dadi/web#feature/http2",
     "accept-language-parser": "^1.4.0",
     "autoprefixer": "^6.5.0",
     "browserify": "^13.1.0",
