chore: remove pw

--- a/api/config/config.development.json
+++ b/api/config/config.development.json
@@ -110,7 +110,7 @@
     "secure": false,
     "from": "publish@dadi.tech",
     "username": "publish@dadi.tech",
-    "password": "hjegfhg3hgjHGJHGWDJHdw_",
+    "password": "********",
     "debug": true
   }
 }
