--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@dadi/api": "^2.2.0",
+    "@dadi/api-wrapper": "^1.7.0",
     "bcrypt-as-promised": "^1.1.0",
     "nodemailer": "^4.0.1",
     "underscore": "^1.8.3",
