--- a/publish/config/config.development.json
+++ b/publish/config/config.development.json
@@ -2,7 +2,7 @@
   "app": {
     "name": "DADI Publish",
     "publisher": "Publisher Name",
-    "baseUrl": "http://localhost"
+    "baseUrl": "http://am.dev.dadi.technology"
   },
   "server": {
     "host": "0.0.0.0",
@@ -14,7 +14,7 @@
   "apis": [
     {
       "name": "DADI Cloud API",
-      "host": "http://localhost",
+      "host": "http://am.dev.dadi.technology",
       "port": 8000,
       "database": "dadi-tech",
       "version": "1.0",
@@ -33,7 +33,7 @@
   ],
   "auth": {
     "enabled": true,
-    "host": "http://localhost",
+    "host": "http://am.dev.dadi.technology",
     "port": 8000,
     "collection": "users",
     "database": "dadi-tech",
