--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -58,8 +58,10 @@
     "forceTrailingSlash": true,
     "path": "./workspace/routes/rewrites.txt"
   },
-  "dust": {
-    "whitespace": true
+  "engines": {
+      "dust": {
+      "whitespace": true
+    }
   },
   "allowJsonView": true,
   "virtualDirectories": [
