feat: more maintainable langage files

--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -26,8 +26,8 @@
     "protocol": "http"
   },
   "globalEvents": [
-    "globals",
-    "i18l"
+    "i18n",
+    "globals"
   ],
   "headers": {
     "useGzipCompression": true,
