--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dadi.tech",
   "version": "1.1.0",
-  "description": "",
+  "description": "The website for DADI, built using our technology.",
   "main": "server.js",
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@dadi/dustjs-helpers": "^1.3.0",
-    "@dadi/web": "^3.0.2",
+    "@dadi/web": "4.x.x",
     "@dadi/web-dustjs": "^1.1.0",
     "accept-language-parser": "^1.4.0",
     "autoprefixer": "^6.5.0",
@@ -50,6 +50,6 @@
     "node": ">=4.6.0",
     "npm": ">3.10.8"
   },
-  "author": "",
+  "author": "DADI <team@dadi.tech>",
   "license": "ISC"
 }
