feat: 🇨🇳 Chinease Traditional (zh_hant)

--- a/web/config/config.development.json
+++ b/web/config/config.development.json
@@ -18,5 +18,6 @@
     "forceTrailingSlash": true,
     "path": "./workspace/routes/rewrites.txt"
   },
-  "allowJsonView": true
+  "allowJsonView": true,
+  "debug": true
 }
