feat: switch contact form to mailgun

--- a/web/package.json
+++ b/web/package.json
@@ -34,13 +34,13 @@
     "dustjs-linkedin": "^2.7.5",
     "exorcist": "^0.4.0",
     "jshint": "^2.9.3",
+    "mailgun-js": "^0.13.1",
     "marked": "^0.3.6",
     "node-notifier": "^4.6.1",
     "node-sass": "^3.10.1",
     "normalize.css": "^4.2.0",
     "postcss-cli": "^2.6.0",
     "postcss-import": "^8.1.2",
-    "sendgrid": "^4.7.1",
     "typewriter": "github:fardjad/realistic-typewriter.js",
     "uglify-js": "^2.7.3",
     "underscore": "^1.8.3",
